# langgraph-projects

email-assistant/: main.py  prompts.py  pyproject.toml  router.py  tools.py
multi-agent/: .env  main.py  pyproject.toml
ollama-deep-researcher/: README.md  configuration.py  duck_duck_go_search.py  graph.py  main.py  prompt_loader.py  pyproject.toml  research  state.py  utils.py
ollama-deep-researcher/prompts/: query_writer_agent_prompt.yaml  reflection_agent_prompt.yaml  summarizer_agent_prompt.yaml
react/: main.py  pyproject.toml
streamlit-chatbot/: streamlit.py
streamlit-chatbot/env/: pyvenv.cfg
