[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.11",
    "langgraph-prebuilt>=0.1.3",
    "langgraph-supervisor>=0.0.9",
    "python-dotenv>=1.0.1",
]
