[project]
name = "ollama-deep-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "duckduckgo-search>=7.5.2",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.10",
    "python-dotenv>=1.0.1",
]
